MCR-3029 use SequencedCollection